[gd_scene load_steps=8 format=3 uid="uid://dd1u388q5vqpr"]

[ext_resource type="Script" path="res://Scenes/Player/player_ui.gd" id="1_38l6o"]
[ext_resource type="Texture2D" uid="uid://b7n0x0drk5c87" path="res://Art/Sprites/C.A.S.E.E.png" id="2_0t5wi"]
[ext_resource type="Texture2D" uid="uid://beo445c56lgfg" path="res://Art/healthbar.png" id="3_elfxv"]
[ext_resource type="VideoStream" path="res://Opening_Title_Crawl-ezgif.com-resize-video.ogv" id="4_axh2g"]

[sub_resource type="Animation" id="Animation_l8ksb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/VideoStreamPlayer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/ColorRect:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/ColorRect:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/ColorRect:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_50jv0"]
resource_name = "fade"
length = 35.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/VideoStreamPlayer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(31, 35),
"transitions": PackedFloat32Array(0.366022, 0.366022),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(31, 35)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/ColorRect:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(31, 35)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/ColorRect:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(31, 35)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/ColorRect:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(31, 35)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4abug"]
_data = {
"RESET": SubResource("Animation_l8ksb"),
"fade": SubResource("Animation_50jv0")
}

[node name="Player_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_38l6o")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(1.56, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -35.0
offset_right = 75.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Enter the code!"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/PanelContainer2/VBoxContainer"]
layout_mode = 2
placeholder_text = "####"

[node name="Cancel" type="Button" parent="CanvasLayer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -59.0
offset_top = -28.0
offset_right = 59.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="slot_1" type="PanelContainer" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="slot_2" type="PanelContainer" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="slot_3" type="PanelContainer" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="slot_4" type="PanelContainer" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 64.0
offset_bottom = 80.0
texture = ExtResource("2_0t5wi")

[node name="HealthBar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 6.0
offset_top = 44.0
offset_right = 70.0
offset_bottom = 108.0
texture_under = ExtResource("3_elfxv")
texture_progress = ExtResource("3_elfxv")
tint_under = Color(0.196078, 0.196078, 0.196078, 1)

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -142.0
offset_top = -46.0
offset_right = 146.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="CanvasLayer"]
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("4_axh2g")
autoplay = true

[node name="Pickup" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.5
offset_top = -73.0
offset_right = 65.5
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Press E to pickup"
horizontal_alignment = 1

[node name="Use" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.5
offset_top = -73.0
offset_right = 65.5
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Press F to use"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4abug")
}
autoplay = "fade"

[connection signal="text_submitted" from="CanvasLayer/PanelContainer2/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="CanvasLayer/PanelContainer2/VBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
